# livekit-dashboard

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INBOUND_SIP_FEATURES.md  LICENSE  Makefile  README.md  REAL_ANALYTICS_GUIDE.md  SIP_ANALYTICS_README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/workflows/: stale-issues.yml
.hermes/plans/: 2026-06-28_080157-dashboard-feature-roadmap.md
app/: __init__.py  main.py
app/routes/: agents.py  alerts.py  audit.py  auth.py  diagnostics.py  egress.py  events.py  homer.py  ingress.py  overview.py  rooms.py  sandbox.py  search.py  settings.py  sip.py  views.py
app/security/: basic_auth.py  csrf.py
app/services/: alerts.py  anomaly.py  audit_log.py  cache.py  dashboard.py  homer.py  livekit.py  notifications.py  room_annotations.py  saved_views.py  search.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html.j2  index.html.j2  logout.html.j2  sandbox.html.j2  settings.html.j2  token_display.html.j2
app/templates/agents/: detail.html.j2  index.html.j2
app/utils/: filters.py  flash.py  formatters.py
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  e2e-test-cases.md  requirement.md
scripts/: setup.sh
tests/: conftest.py  test_alerts.py  test_anomaly.py  test_audit.py  test_dashboard_service.py  test_diagnostics.py  test_egress.py  test_events.py  test_ingress.py  test_main.py  test_notifications.py  test_readonly.py  test_rooms.py  test_search.py  test_security.py  test_sip.py  test_utils.py  test_views.py
(+21 files in other folders)
